test/deca/syntax/invalid/print_incomplet.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque argument/parenthèses)

{
    print;
}